bad/2020-07-06/14-35/105.1/build.err
run.c: In function ‘moody’:
run.c:9:8: error: expected expression before ‘char’
     if(char[i]='I'){
        ^~~~
run.c:10:11: error: expected identifier or ‘(’ before ‘[’ token
       char[i]= 'i';
           ^